--- a/package.json
+++ b/package.json
@@ -10,22 +10,32 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.1",
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.3",
+    "@livekit/components-react": "^1.5.1",
+    "@livekit/components-styles": "^1.0.8",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.17.1",
     "@uploadthing/react": "^6.0.2",
     "axios": "^1.6.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
+    "date-fns": "^3.0.6",
+    "emoji-mart": "^5.5.2",
+    "livekit-client": "^1.15.5",
+    "livekit-server-sdk": "^1.2.7",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
